AdminVentas ya casi completo

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,10 @@ html.dark .custom-Dark {
   color: #000000;
 }
 
+.custom-textblack {
+  color: #000000;
+}
+
 .custom-blue {
   color: #3F54D1;
 }
